# Algoritmos-Cpp-OBI

./: CMakeLists.txt  README.md
exercicios/: acelerador.cpp  areatrianguloretangulo.cpp  basqueterobos.cpp  campominado.cpp  casamentonumeros.cpp  caverna.cpp  chaves.cpp  copadomundo.cpp  expressoes.cpp  frequencianaaula.cpp  listadechamada.cpp  proibido.cpp  quadromagico.cpp  torre.cpp  transporte.cpp  twosumleetcode.cpp  zeroparacancelar.cpp
provafase2/: cubo.cpp  digitos.cpp  frutas.cpp  gameshow.cpp  tocadosaci.cpp  triopalitinhos.cpp
