cmake_minimum_required(VERSION 3.29)
project(primeiroProjeto)

set(CMAKE_CXX_STANDARD 11)

add_executable(primeiroProjeto main.cpp)
add_executable(acelerador exercicios/acelerador.cpp)
add_executable(expressoes exercicios/expressoes.cpp)
add_executable( campominado exercicios/campominado.cpp)
add_executable( areatriangulo exercicios/areatrianguloretangulo.cpp)
add_executable( basqueterobo exercicios/basqueterobos.cpp)
add_executable( testes exercicios/testes.cpp)
add_executable( chaves exercicios/chaves.cpp)
add_executable( zeroparacancelar exercicios/zeroparacancelar.cpp)
add_executable( twosum exercicios/twosumleetcode.cpp)
add_executable(copadomundo exercicios/copadomundo.cpp)
add_executable(frequencia exercicios/frequencianaaula.cpp)
add_executable(proibido exercicios/proibido.cpp)
add_executable(listachamada exercicios/listadechamada.cpp)
add_executable(quadromagico exercicios/quadromagico.cpp)
add_executable(torre exercicios/torre.cpp)

